@@ -9,7 +9,6 @@ ipc_priv.h
 kernel_sigaction.h
 kernel_stat.h
 kernel_termios.h
-net/route.h
 oldglob.c
 rt_sigaction.S
 sizes.h
