@@ -6,7 +6,6 @@ ioperm.c
 ldd-rewrite.sed
 __start_context.S
 ucontext_i.h
-net/route.h
 sys/procfs.h
 sys/io.h
 sys/rse.h
