@@ -1,5 +1,4 @@
 ldd-rewrite.sed
-net/route.h
 sys/elf.h
 sys/procfs.h
 sys/user.h
